# Forge

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
.forge/: project.json
.forge/context/: planning-2026-06-28T23-53-3900-00.md  planning-2026-06-28T23-59-0500-00.md  web-ui-smoke-2026-06-28T22-21-5800-00.md  workflow-feature-2722db0d-2026-06-29T14-20-2400-00.md  workflow-feature-c92605e4-2026-06-29T14-23-0500-00.md
.forge/memory/: index.json
.forge/plans/: workflow-bugfix-045a8199-20260630T221105.md  workflow-feature-2722db0d-20260629T142152.md
.forge/workflows/: 045a819938d644c9.json  2722db0d897f4248.json  c92605e4899c41b4.json
.forge/worksets/: planning.json  product.json  web-ui-smoke.json  workflow-feature-2722db0d.json  workflow-feature-c92605e4.json
docs/: ARCHITECTURE.md  dev-log.md
docs/development/: DEVELOPMENT_LOG.md
docs/reports/: forge-e2e-dogfood-report-20260629.md  patch-generation-fix-plan-20260630.md
forge/: __init__.py  version.py
forge/artifacts/: __init__.py  discovery.py  metadata.py  models.py  registry.py
forge/cli/: app.py
forge/commands/: doctor.py  models.py  project_context.py
forge/config/: manager.py  settings.py
forge/context/: __init__.py  bundle.py  excerpt.py  render.py  (+2 more)
tests/: test_application_services.py  test_artifacts.py  test_cli.py  test_config_manager.py  test_context_budget.py  test_context_bundle.py  test_dogfood_hardening.py  test_edit_targets.py  test_execution.py  test_factory.py  test_git_service.py  test_implement.py  test_memory.py  test_model_manager.py  test_model_telemetry.py  test_ollama_provider.py  test_patches.py  test_phase2e_root_migration.py  test_planning.py  test_policy.py  test_project_context.py  test_project_phase2d.py  test_provider_responses.py  test_provider_truncation.py  test_repository_inspection.py  test_settings.py  test_srp.py  test_verification.py  test_web.py  test_workflow.py  test_workset_persist.py  test_workset_query.py  test_workset_suggest.py
(+136 files in other folders)
