[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-workbench"
version = "0.1.0"
description = "Local-first AI software engineering workbench."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Forge Contributors" }]
dependencies = [
    "pydantic>=2.7",
    "rich>=13.7",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "pytest>=8.2",
    "ruff>=0.4",
]

[project.scripts]
forge = "forge.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
