[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-workbench"
version = "0.1.0"
description = "Local-first AI software engineering workbench."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Forge Contributors" }]
dependencies = [
    "fastapi>=0.111,<0.116",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "rich>=13.7",
    "structlog>=24.1",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "black>=24.4",
    "httpx>=0.27",
    "pytest>=8.2",
    "ruff>=0.4",
]

[project.scripts]
forge = "forge.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services such as a running Ollama instance",
]
